syntax = "proto3";

import "google/protobuf/timestamp.proto";

package chatservice;
option java_multiple_files = true;
option java_package = "io.github.positionpal.proto";

/* START GRPC DEFINITION */
service ChatService {
  rpc RetrieveLastMessages(RetrieveLastMessagesRequest) returns (MessageResponse) {}
}

// 1. Retrieve last messages from the group
message RetrieveLastMessagesRequest {
  string group_id = 1;
  string client_id = 2;
  string number_of_messages = 3;
}

message MessageResponse {
  repeated Message messages = 1;
}

message Message {
  string client_id = 1;
  string content = 2;
  google.protobuf.Timestamp timestamp = 3;
}